--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "node and mongodb wiring exercise",
   "main": "index.js",
   "scripts": {
-    "test": "mocha server/**/*.test.js",
-    "test-watch": "nodemon --exec \"npm test\"",
-    "start": "node server/server.js"
+    "start": "node server/server.js",
+    "test": "export NODE_ENV=test ||  SET \"NODE_ENV=test\" && mocha server/**/*.test.js",
+    "test-watch": "nodemon --exec \"npm test\""
   },
   "engine": {
     "node": "10.13.0"
